--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,8 @@ Description: FARS data analysis in Coursera course
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
+Suggests:
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+RoxygenNote: 5.0.1
