--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ cache: packages
 before_install:
   - Rscript -e 'install.packages("dplyr", lib="/home/travis/R-bin/lib/R/library/")'
   - Rscript -e 'install.packages("maps", lib="/home/travis/R-bin/lib/R/library/")'
+  - Rscript -e 'install.packages("readr", lib="/home/travis/R-bin/lib/R/library/")'
