--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ before_install:
   - Rscript -e 'install.packages("dplyr", lib="/home/travis/R-bin/lib/R/library/")'
   - Rscript -e 'install.packages("maps", lib="/home/travis/R-bin/lib/R/library/")'
   - Rscript -e 'install.packages("readr", lib="/home/travis/R-bin/lib/R/library/")'
+  - Rscript -e 'install.packages("tidyr", lib="/home/travis/R-bin/lib/R/library/")'
