--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@
 language: R
 sudo: false
 cache: packages
+before_install:
+  - Rscript -e 'install.packages("dplyr", lib="/home/travis/R-bin/lib/R/library/")'
+  - Rscript -e 'install.packages("maps", lib="/home/travis/R-bin/lib/R/library/")'
+  - Rscript -e 'install.packages("readr", lib="/home/travis/R-bin/lib/R/library/")'
+  - Rscript -e 'install.packages("tidyr", lib="/home/travis/R-bin/lib/R/library/")'
